week4/all-env-from-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: container-env-example
spec:
  containers:
    - name: my-container
      image: busybox
      args: ['tail', '-f', '/dev/null']
      envFrom: # 하나의 컨피그맵에 여러 개의 키-값 쌍이 존재하더라도 모두 환경변수로 가져오도록 설정
      - configMapRef:
          name: log-level-configmap
      - configMapRef:
          name: start-k8s
