week4/volume-mount-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod
spec:
  containers:
    - name: my-container
      image: busybox
      args: [ "tail", "-f", "/dev/null" ]
      volumeMounts: # 아래 volumes 항목에서 정의된 볼륨을 컨테이너 내부의 어떤 디렉토리에 마운트할 것인지 명시
      - name: configmap-volume # volumes에서 정의한 컨피그맵 볼륨 이름
        mountPath: /etc/config # 컨피그맵의 데이터가 위치할 경로

  volumes: # 사용할 볼륨의 목적을 정의
    - name: configmap-volume # 컨피그맵 볼륨 이름
      configMap:
        name: start-k8s
