week4/hostname-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-svc-nodeport
spec:
  ports:
    - name: web-port
      port: 8080
      targetPort: 80
      # 명시하지 않을 경우 기본적으로 30000 ~ 32768 포트 중에 랜덤으로 선택됨, 특정 포트로 열리는 것을 원할 경우
      # nodeport: 31000
  # 특정 클라이언트가 같은 Pod으로부터만 처리되게 하려면 sessionAffinity 항목을 ClientIP로 설정함
  # sessionAffinity: ClientIP
  selector:
    app: webserver
  type: NodePort
