week4/ingress-example-k8s-latest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    # nginx 인그레스 컨트롤러에서만 사용할 수 있으며 인그레스에 정의된 경로로 들어온 요청을 rewrite-target에 설정된 경로로 전달함
    # 예시에서는, Nginx 인그레스 컨트롤러로 /echo-hostname으로 접근하면 hostname-svc-nodeport에는 / 경로로 전달됨
    # 참고로 /echo-hostname이라는 경로로 시작하는 모든 요청은 hostname-svc-nodeport에는 / 경로로 전달되는 것임 (e.g. /echo-hostname/alice/bob도 /로 전달됨)
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx" # deprecated
spec:
  # ingressClassName: nginx # 어떤 인그레스 컨트롤러에 적용할 것인지 의미 (deprecated된 kubernetes.io/ingress.class 대신 사용)
  rules:
  # host: 해당 도메인 이름으로 접근하는 요청에 대해서 처리 규칙을 적용
  # 예시에서는 host가 alicek106.example.com 한개이지만, 배열이기에 여러 개의 host를 정의해서 사용할 수 있음
  - host: ed.example.com
    http:
      paths:
      # 해당 경로에 들어온 요청을 어느 서비스로 전달할 것인지 정의함
      # 예시에서는 /echo-hostname이라는 경로의 요청을 backend에 정의된 서비스로 전달함, 이또한 배열이기에 여러 개의 path를 정의해 경로를 처리할 수 있음
      - path: /echo-hostname
        pathType: Prefix
        backend:
          service:
            # path로 들어온 요청이 전달될 서비스와 포트
            # 예시에서는 /echo-hostname이라는 경로로 들어온 요청을 hostname-svc-nodeport 서비스의 80 포트로 전달함
            name: hostname-svc-nodeport
            port:
              number: 80
