week4/ingress-rewrite-target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example2
  annotations:
    # echo-hostname/color/red => /color/red
    # echo-hostname/color => /color
    # echo-hostname => /
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # path의 (.*)에서 획득한 경로로 전달함
spec:
  ingressClassName: nginx
  rules:
  - host: ed.example2.com
    http:
      paths:
      - path: /echo-hostname(/|$)(.*) # (.*)을 통해 경로를 얻음
        pathType: Prefix
        backend:
          service:
            name: hostname-svc-nodeport
            port:
              number: 80
